--- a/ruby-sinatra/views/layout.erb
+++ b/ruby-sinatra/views/layout.erb
@@ -1,1 +1,12 @@
 <!-- Base template, HTML-wrapper (header, CSS links) -->
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>WhoKnows</title>
+  <link rel="stylesheet" href="../public/css/style.css">
+</head>
+<body>
+<%= yield %>  <!-- Her indsættes indholdet fra andre views -->
+</body>
+</html>
