--- a/ruby-sinatra/views/login.erb
+++ b/ruby-sinatra/views/login.erb
@@ -1,1 +1,19 @@
 <!-- Login page -->
+
+<h2>Log in</h2>
+
+<% if @error %>
+    <div class="error"><Strong>Error:</strong> <%= @error %></div>
+<% end %>
+
+<form action="/api/login" method="POST">
+    <dl>
+      <dt>Username:
+      <dd><input type="text" name="username" size="30" value="<%= @username || '' %>">
+      <dt>Password:
+      <dd><input type="password" name="password" size="30">
+    </dl>
+    <div class="actions">
+      <input type="submit" id="login-button" value="Log In">
+    </div>
+  </form>
